added TOC, curtosy of `org-make-toc`, for that sweet GH readability

--- a/emacs/config.org
+++ b/emacs/config.org
@@ -31,6 +31,136 @@ Some other significant changes:
 1. Replace the beloved =helm= with =vertico= + =marginalia= + =consult= + =embark=.
 2. Replace =org-ref= with =citar= and =org-cite.el=.
 
+* Table of Contents
+:PROPERTIES:
+:TOC:      :include all :depth 4
+:END:
+
+Here's a TOC (because github can't render it), curtosy =org-make-toc=.
+
+:CONTENTS:
+- [[#overview][Overview]]
+- [[#table-of-contents][Table of Contents]]
+- [[#loading-the-config][Loading the config]]
+- [[#package-management-straightel-and-use-package][Package management: straight.el and use-package]]
+- [[#general-utilities][General utilities]]
+  - [[#basic-variables][Basic variables]]
+  - [[#utility-functions][Utility functions]]
+  - [[#make-format-time-string-consistent-across-os-time-settings][Make format-time-string consistent across OS time settings]]
+  - [[#file-backup][File backup]]
+  - [[#custom-settings-in-seperate-file][Custom settings in seperate file]]
+  - [[#compatel][compat.el]]
+  - [[#dashel][dash.el]]
+  - [[#result][Result]]
+- [[#os-specific-setup][OS specific setup]]
+  - [[#linux][Linux]]
+  - [[#windows-linux-subsystem][Windows Linux Subsystem]]
+  - [[#result][Result]]
+- [[#the-holy-quaternity-vertico--orderless--marginalia--consult][The Holy Quaternity: vertico + orderless + marginalia + consult]]
+- [[#user-interface][User interface]]
+  - [[#discovery-and-help][Discovery and help]]
+    - [[#which-keyel][which-key.el]]
+  - [[#fonts--text][Fonts & Text]]
+    - [[#scaling][Scaling]]
+    - [[#special][Special]]
+    - [[#pretty][Pretty]]
+    - [[#centering-and-stuff][Centering and stuff]]
+  - [[#navigation][Navigation]]
+    - [[#ace-windowel][ace-window.el]]
+    - [[#avyel][avy.el]]
+  - [[#result][Result]]
+- [[#project-management][Project management]]
+  - [[#projectileel][projectile.el]]
+  - [[#git][Git]]
+  - [[#treemacsel][treemacs.el]]
+  - [[#result][Result]]
+- [[#workspace-management][Workspace management]]
+  - [[#perspectiveel][perspective.el]]
+  - [[#result][Result]]
+- [[#editing][Editing]]
+  - [[#general][General]]
+  - [[#undo--redo][Undo & redo]]
+  - [[#result][Result]]
+- [[#terminal-emulation][Terminal emulation]]
+  - [[#vtermel][vterm.el]]
+  - [[#result][Result]]
+- [[#completion--assistants][Completion & assistants]]
+  - [[#yasnippet][yasnippet]]
+  - [[#companyel][company.el]]
+  - [[#copilotel][copilot.el]]
+  - [[#chatgptel][chatgpt.el]]
+  - [[#result][Result]]
+- [[#viewing-non-text-files][Viewing non-text files]]
+  - [[#pdf-toolsel][pdf-tools.el]]
+  - [[#result][Result]]
+- [[#programming--markup][Programming & Markup]]
+  - [[#prog-mode][prog-mode]]
+  - [[#flycheck][Flycheck]]
+  - [[#latex][LaTeX]]
+  - [[#markdown][Markdown]]
+  - [[#polymode][Polymode]]
+  - [[#yaml][YAML]]
+  - [[#eglot][eglot]]
+  - [[#treesitter][treesitter]]
+  - [[#r-or-ess][R (or ess)]]
+  - [[#julia][Julia]]
+  - [[#python][Python]]
+  - [[#emacs-lisp][Emacs lisp]]
+  - [[#jupyter][Jupyter]]
+  - [[#ein][Ein]]
+  - [[#graphviz--dot][GraphViz + Dot]]
+  - [[#result][Result]]
+- [[#org][Org]]
+  - [[#tors-reading-list][Tor's reading list]]
+  - [[#agenda-utilities][Agenda utilities]]
+  - [[#org][org]]
+  - [[#babel][Babel]]
+    - [[#ob-async][ob-async]]
+  - [[#exports][Exports]]
+    - [[#org-reveal][org-reveal]]
+    - [[#by-backend-allow-backend-specific-headers-in-exports][by-backend: allow backend-specific headers in exports]]
+  - [[#navigation][Navigation]]
+    - [[#org-sidebarel][org-sidebar.el]]
+  - [[#other-stuff][Other stuff]]
+    - [[#proper-handling-of-ansi-color-codes][Proper handling of ANSI color codes]]
+    - [[#org-download][org-download]]
+    - [[#org-ref][org-ref]]
+    - [[#org-contrib][org-contrib]]
+    - [[#org-present][org-present]]
+  - [[#personal-customization][Personal customization]]
+    - [[#make-c-c-c-v-c-n-and-c-c-c-v-c-p-handle-inline-call][Make C-c C-v C-n and C-c C-v C-p handle inline CALL]]
+    - [[#display-inline-images-in-subtree-only][Display inline images in subtree only]]
+    - [[#command-for-inserting-src-block-below][Command for inserting src block below]]
+    - [[#make-include--useful-outside-of-exports][Make #+INCLUDE: ... useful outside of exports]]
+    - [[#result][Result]]
+  - [[#result][Result]]
+- [[#citations][Citations]]
+- [[#email][Email]]
+  - [[#aim][Aim]]
+  - [[#authinfo][~/.authinfo]]
+  - [[#python-3][Python 3]]
+  - [[#retrieving-emails-using-offlineimap][Retrieving emails using offlineimap]]
+    - [[#integration-with-different-providers][Integration with different providers]]
+    - [[#authentication][Authentication]]
+  - [[#interfacing-with-emails-using-notmuch][Interfacing with emails using notmuch]]
+  - [[#setting-up-cron-for-periodic-checking][Setting up cron for periodic checking]]
+  - [[#writing-messages][Writing messages]]
+    - [[#disabling-automatic-line-break][Disabling automatic line-break]]
+    - [[#signature][Signature]]
+  - [[#resulting-config][Resulting config]]
+- [[#themes][Themes]]
+  - [[#doom-themesel][doom-themes.el]]
+  - [[#doom-modelineel][doom-modeline.el]]
+  - [[#custom-hooks][Custom hooks]]
+  - [[#result][Result]]
+- [[#interacting-with-the-outside-of-emacs][Interacting with the outside of Emacs]]
+  - [[#emacs-anywhere][Emacs anywhere]]
+  - [[#org-protocolel-and-org-capture-extension-for-firefox--chrome][org-protocol.el and  (for Firefox & Chrome)]]
+- [[#result][Result]]
+  - [[#full-config][Full config]]
+  - [[#minimalist-config][Minimalist config]]
+:END:
+
 * Loading the config
 As mentioned in the overview, we're going to take the following approach in main init file:
 #+begin_src emacs-lisp :tangle init.el
