--- a/emacs/config.org
+++ b/emacs/config.org
@@ -2050,6 +2050,36 @@ This package makes it trivial to paste and drag-and-drop images into a Org buffe
   (setq helm-org-named-directories '("/home/tor/org-blog/notes")))
 #+end_src
 
+*** =org-roam=
+#+name: org--org-roam
+#+begin_src emacs-lisp 
+(use-package org-roam
+  :ensure t
+  :custom
+  (org-roam-directory (file-truename "~/org-blog/notes/quick/"))
+  (org-roam-graph-viewer nil)
+  ;; Add `#+SETUPFILE: ~/org-roam/setup.org' to the top of any org-roam file to use this template.
+  (org-roam-capture-templates
+   '(("d" "default" plain "%?" :target
+     (file+head "%<%Y%m%d%H%M%S>-${slug}.org" "#+SETUPFILE: ~/org-blog/setup.org
+#+TITLE: ${title}
+")
+    :unnarrowed t)))
+  :bind (("C-c n l" . org-roam-buffer-toggle)
+         ("C-c n f" . org-roam-node-find)
+         ("C-c n g" . org-roam-graph)
+         ("C-c n i" . org-roam-node-insert)
+         ("C-c n c" . org-roam-capture)
+         ;; Dailies
+         ("C-c n j" . org-roam-dailies-capture-today))
+  :config
+  ;; If you're using a vertical completion framework, you might want a more informative completion interface
+  (setq org-roam-node-display-template (concat "${title:*} " (propertize "${tags:60}" 'face 'org-tag)))
+  (org-roam-db-autosync-mode)
+  ;; If using org-roam-protocol
+  (require 'org-roam-protocol))
+#+end_src
+
 *** Anki
 #+name: org--anki-editor
 #+begin_src emacs-lisp 
