--- a/emacs/config.org
+++ b/emacs/config.org
@@ -1220,8 +1220,31 @@ highlight color.  With a double prefix argument, prompt for a color."
 ;;; <EGLOT> configuration, pick this or the LSP configuration but not both.
 ;; Using Eglot with Pyright, a language server for Python.
 ;; See: https://github.com/joaotavora/eglot.
-(use-package eglot
-  :straight (eglot :type built-in))
+;; (use-package eglot
+;;   :straight (eglot :type built-in))
+#+end_src
+
+** LSP
+#+name: programming--lsp
+#+begin_src emacs-lisp 
+(use-package lsp-mode
+  :init
+  ;; set prefix for lsp-command-keymap (few alternatives - "C-l", "C-c l")
+  (setq lsp-keymap-prefix "C-c l")
+  :hook (;; replace XXX-mode with concrete major-mode(e.g. python-mode)
+         (julia-mode . lsp)
+         ;; if you want which-key integration
+         (lsp-mode . lsp-enable-which-key-integration))
+  :commands lsp)
+
+(use-package lsp-ui :commands lsp-ui-mode)
+(use-package lsp-treemacs :commands lsp-treemacs-errors-list)
+
+(use-package lsp-julia
+  ;; :pin melpa
+  :config (progn
+            ;; (setq lsp-julia-package-dir nil)
+            (setq lsp-julia-default-environment "~/.julia/environments/v1.9")))
 #+end_src
 
 ** treesitter
@@ -1271,29 +1294,32 @@ highlight color.  With a double prefix argument, prompt for a color."
 (use-package julia-mode
   :ensure t)
 
-(use-package julia-ts-mode
-  :after (julia-mode)
-  :hook
-  (julia-ts-mode . eglot-ensure)
-  (julia-ts-mode . my/set-julia-prettify-symbols-alist)
-  :config
-  ;; (add-hook 'julia-mode-hook 'my/set-julia-prettify-symbols-alist)
-  )
+(setq use-treesitter-julia-p nil)
 
-(use-package julia-formatter
-  :after (julia-ts-mode)
-  :straight (julia-formatter :type git
-                             :host github
-                             :repo "torfjelde/julia-formatter.el"
-                             :branch "torfjelde/develop"
-                             :files ("julia-formatter.el" "formatter_service.jl" "Project.toml" "Manifest.toml"))
-  :hook
-  (julia-ts-mode . julia-formatter-mode)
-  :custom
-  (julia-formatter-should-compile-julia-image 'never-compile))
+(when use-treesitter-julia-p
+  (use-package julia-ts-mode
+    :after (julia-mode)
+    :hook
+    ;; (julia-ts-mode . eglot-ensure)
+    (julia-ts-mode . my/set-julia-prettify-symbols-alist)
+    :config
+    ;; (add-hook 'julia-mode-hook 'my/set-julia-prettify-symbols-alist)
+    ))
 
-(use-package eglot-jl
-  :after (eglot julia-ts-mode))
+;; (use-package julia-formatter
+;;   :after (julia-ts-mode)
+;;   :straight (julia-formatter :type git
+;;                              :host github
+;;                              :repo "torfjelde/julia-formatter.el"
+;;                              :branch "torfjelde/develop"
+;;                              :files ("julia-formatter.el" "formatter_service.jl" "Project.toml" "Manifest.toml"))
+;;   :hook
+;;   (julia-ts-mode . julia-formatter-mode)
+;;   :custom
+;;   (julia-formatter-should-compile-julia-image 'never-compile))
+
+;; (use-package eglot-jl
+;;   :after (eglot julia-ts-mode))
 #+end_src
 
 ** Python
@@ -1302,8 +1328,8 @@ highlight color.  With a double prefix argument, prompt for a color."
 ;; Python
 (use-package python
   ;; TODO: use `eglot' and `pyright'.
-  :hook
-  (python-mode . eglot-ensure)
+  ;; :hook
+  ;; (python-mode . eglot-ensure)
   )
 #+end_src
 
@@ -1376,7 +1402,8 @@ This is different from the =jupyter=, since this actually allows us to work with
 #+name: programming
 #+begin_src emacs-lisp
 <<programming--prog-mode>>
-<<programming--eglot>>
+;; <<programming--eglot>>
+<<programming--lsp>>
 <<programming--flycheck>>
 <<programming--latex>>
 <<programming--markdown>>
@@ -1820,10 +1847,11 @@ PRIORITY may be one of the characters ?A, ?B, or ?C."
   :straight (:type git :host github :repo "torfjelde/ob-julia" :branch "master")
   ;; :hook (org-mode . (lambda () (require 'ob-julia)))
   :config
-  ;; Delete the current element in `org-src-lang-modes', if exists.
-  (setq org-src-lang-modes (delq (assoc "julia" org-src-lang-modes) org-src-lang-modes))
-  ;; Add `julia-ts` as the current mode to use.
-  (add-to-list 'org-src-lang-modes '("julia" . julia-ts))
+  (when use-treesitter-julia-p
+    ;; Delete the current element in `org-src-lang-modes', if exists.
+    (setq org-src-lang-modes (delq (assoc "julia" org-src-lang-modes) org-src-lang-modes))
+    ;; Add `julia-ts` as the current mode to use.
+    (add-to-list 'org-src-lang-modes '("julia" . julia-ts)))
 
   (org-babel-do-load-languages
      'org-babel-load-languages
